# stepic_django_blog

./: .pre-commit-config.yaml  Makefile  pyproject.toml
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug.py
blog/templatetags/: blog_tags.py
mysite/: settings.py  urls.py
templates/blog/: base.html
templates/blog/post/: detail.html  list.html  share.html
